# travian-assistant

./: .gitignore  CLAUDE.md
travian-bot/: README - Copy.md  README.md  manifest.json
travian-bot-mac/: .gitignore  package.json
travian-bot-mac/sidecar/: browser-manager.js  index.js  package-lock.json  package.json  page-controller.js
travian-bot-mac/src/: app.js  index.html  styles.css
travian-bot-mac/src-tauri/: Cargo.toml  tauri.conf.json
travian-bot-mac/src-tauri/icons/: icon.icns
travian-bot-mac/src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs  tray.rs
travian-bot/background/: service-worker.js
travian-bot/content/: actionExecutor.js  domHelpers.js  domScanner.js
travian-bot/core/: actionScorer.js  botEngine.js  contentScriptBridge.js  decisionEngine.js  eventBus.js  farmIntelligence.js  farmManager.js  farmScheduler.js  gameStateCollector.js  heroManager.js  instanceManager.js  mapScanner.js  navigationManager.js  scheduler.js  stateAnalyzer.js  strategyAdapter.js  taskHandlerRegistry.js  taskHandlers.js  taskQueue.js
travian-bot/dashboard/: dashboard.js  index.html  styles.css
travian-bot/icons/: generate-icons.html
travian-bot/options/: options.html
travian-bot/popup/: index.html  popup.css  popup.js  styles.css
travian-bot/shared/: constants.js  formatters.js  ui-client.js
travian-bot/strategy/: buildOptimizer.js  gameData.js  globalPlanner.js  militaryPlanner.js  resourceIntel.js  strategyEngine.js  test_integration.js  test_resourceIntel.js
travian-bot/utils/: configSchema.js  delay.js  logger.js  storage.js
(+38 files in other folders)
