[package]
name = "travian-bot"
version = "1.0.0"
description = "Travian Bot — macOS Standalone App"
authors = ["you"]
edition = "2021"

[lib]
name = "travian_bot_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
